classDiagram
    class Zone {
        +zone_id int
        +municipality str
        +households int
        +employment int
        +from_file(path, columns) list
    }

    class Carrier {
        +name str
        +share float
        +from_file(path, columns) list
    }

    class Depot {
        +depot_id int
        +zone_id int
        +carrier str
        +from_file(path, columns) list
    }

    class ParcelDemand {
        +destination_zone_id int
        +depot_id int
        +vehicle_type int
        +n_parcels int
    }

    class SkimMatrix {
        +data ndarray
        +n_zones int
        +get(from_zone_id, to_zone_id) int
        +from_file(path, zones) SkimMatrix
    }

    Depot --> Zone : zone_id
    Depot --> Carrier : carrier
    ParcelDemand --> Zone : destination_zone_id
    ParcelDemand --> Depot : depot_id
    SkimMatrix --> Zone : zones
